# fastgear-cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml
.github/: git-commit-instructions.md
.github/actions/detect-release/: action.yml
.github/workflows/: audit.yaml  cd.yaml  ci.yaml  lint.yaml  linting.yaml  publish.yaml  release.yaml  tests.yaml
fastgear_cli/: __init__.py
fastgear_cli/cli/: app.py
fastgear_cli/cli/commands/: add.py  init.py
fastgear_cli/cli/commands/helpers/: __init__.py  add_controller_helper.py  add_entity_helper.py  add_module_helper.py  add_repository_helper.py  add_service_helper.py
fastgear_cli/cli/commands/helpers/add/: controller.py  entity.py  handler.py  module.py  repository.py
fastgear_cli/cli/prompts/: add_prompts.py  init_project.py  project.py
fastgear_cli/core/: exceptions.py  filesystem.py  models.py  render.py
fastgear_cli/core/constants/enums/: __init__.py  agent_tools_enum.py  ci_provider_enum.py  database_provider_enum.py  element_type_enum.py
fastgear_cli/core/models/: __init__.py  add_element_config.py  project_init_config.py
fastgear_cli/core/utils/: file_tree_utils.py  init_content_merge_utils.py  init_file_utils.py  python_validators_utils.py
fastgear_cli/templates/add/controller/folder/controllers/: __init__.py.j2  {{element_name}}_controller.py.j2
fastgear_cli/templates/add/entity/flat/: {{element_name}}_entity.py.j2
fastgear_cli/templates/add/entity/folder/entities/: __init__.py.j2
fastgear_cli/templates/add/module/flat/: __init__.py.j2
fastgear_cli/templates/add/module/folder/: __init__.py.j2
fastgear_cli/templates/add/repository/flat/: {{element_name}}_repository.py.j2
fastgear_cli/templates/add/repository/folder/repositories/: {{element_name}}_repository.py.j2
fastgear_cli/templates/add/service/folder/services/: {{element_name}}_service.py.j2
fastgear_cli/templates/default_project/{{project_name}}/: .dockerignore  .editorconfig  README.md.j2  pyproject.toml.j2
fastgear_cli/templates/default_project/{{project_name}}/docker/: local.yaml.j2
fastgear_cli/templates/new_project/{{project_name}}/: .gitignore  .gitmojirc.json  .pre-commit-config.yaml.j2  README.md.j2  alembic.ini  pyproject.toml.j2  ruff.toml
fastgear_cli/templates/new_project/{{project_name}}/.github/: copilot-instructions.md
fastgear_cli/templates/new_project/{{project_name}}/.github/workflows/: audit.yaml  audit.yml  ci.yml  lint.yml  linting.yaml  tests.yaml  tests.yml
fastgear_cli/templates/new_project/{{project_name}}/docker/: Dockerfile  Makefile.j2  local.yaml.j2
fastgear_cli/templates/new_project/{{project_name}}/src/: main.py.j2
fastgear_cli/templates/new_project/{{project_name}}/src/config/: settings.py  settings.py.j2
fastgear_cli/templates/new_project/{{project_name}}/src/migrations/: env.py
fastgear_cli/templates/new_project/{{project_name}}/tests/: conftest.py
fastgear_cli/templates/new_project/{{project_name}}/tests/api/: conftest.py  (+1 more)
fg/cli/: app.py
fg/cli/commands/: init.py
fg/cli/prompts/: project.py
fg/core/: filesystem.py  render.py
fg/templates/default_project/{{project_name}}/: .gitignore  README.md.j2  pyproject.toml.j2
fg/templates/default_project/{{project_name}}/src/: main.py.j2
src/fastgear_cli/cli/: app.py
src/fastgear_cli/cli/commands/: init.py
tests/fixtures/cli/commands/: init_fixtures.py
tests/fixtures/cli/prompts/: init_project_fixtures.py
tests/fixtures/core/: filesystem_fixtures.py  models_fixtures.py  render_fixtures.py
tests/fixtures/core/golden/: add_entity_folder.snapshot  new_project_minimal.tree
tests/fixtures/core/utils/: init_content_merge_utils_fixtures.py
tests/unit/cli/: test_app.py
tests/unit/cli/commands/: test_add.py  test_init.py
tests/unit/cli/prompts/: test_init_project.py  test_project.py
tests/unit/core/: test_filesystem.py  test_models.py  test_render.py  test_template_golden.py
tests/unit/core/models/: test_project_init_config.py
tests/unit/core/utils/: test_init_content_merge_utils.py
(+20 files in other folders)
