[project]
name = "fastgear-cli"
version = "0.1.0"
description = "CLI tool for generating FastAPI boilerplate code using the fastgear library"
authors = [
    { name = "Henrique Marcuzzo", email = "henrique.souza.m06@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "questionary>=2.1.1",
    "typer>=0.21.1",
]

[dependency-groups]
dev = [
    # ----------------------------------------
    # Code quality
    # ----------------------------------------
    "pre-commit>=4.5.1",
    "ruff>=0.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["fastgear_cli"]

[project.scripts]
fg = "fastgear_cli.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


# ==== Ruff ====
[tool.ruff]
fix = true
line-length = 100
indent-width = 4
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "_build",
    "buck-out",
    "build",
    "dist",
]

[tool.ruff.lint]
fixable = ["ALL"]  # Fix all fixable issues
select = ["ALL"]   # Select all rules available
extend-select = ["I"]
ignore = [
    "A005",
    "COM812",
    "C901",
    "DTZ005",
    "E501",
    "FIX002",
    "F811",
    "G004",
    "PLC0415",
    "PERF203",
    "PGH003",
    "N818",
    "SLF001",
    "ARG",
    "ANN",
    "B",
    "D",
    "EM",
    "INP",
    "RUF",
    "PLR",
    "S",
    "TD",
    "TRY"
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
    "F401",
    "PLR2004",
    "PT006",
    "N806"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
